-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
7666
The proc directory naming of the filter-* namespaces is pretty broken on master. In 2.1, it would look like this:
/proc/fs/lustre/ldlm/namespaces/filter-lsa-OST0000_UUID
but as of 2.3.63 it not looks like this:
/proc/fs/lustre/ldlm/namespaces/filter-ffff88081233c000
The previous form was human readable, and tools could relatively easily match those stats up with the correct OST, because the OST name is right in the directory name. The new form is not human readable, and I can't find any mention of that pointer value anywhere else in /proc, so it is pretty useless.
Not to mention is is very likely a bad idea security wise to be exposing internal kernel pointer values to user-space like this.
Since LMT is currently the only way that our admins have the slightest idea what is going on with a Lustre filesystem and this significantly degrades LMT's functionality, I would argue that this needs to be fixed before 2.4.0.