LU-3159 lprocfs: fix LDLM namespace names in /proc

This patch fixes LDLM namespace names in
/proc/fs/lustre/ldlm/namespaces/ to use obd->obd_uuid.uuid
instead of a pointer address.

Signed-off-by: Jian Yu <jian.yu@intel.com>
Change-Id: Ieb3ef6c48d1f52f8d238bb64b7ce9ea004d2964f
Reviewed-on: http://review.whamcloud.com/6039
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>